# minichat

./: .gitignore  README.md  pyproject.toml
minichat/: core.py  minichat.py  startup.xml
minichat/aiml_data/alice/: custom.aiml  sex.aiml
minichat/aiml_data/custom/: minichat.aiml
